--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
 <body>
   <h1>YouTube Video Info Copier</h1>
   <button id="copyInfoButton">Copy Info</button>
+  <div id="message"></div>
   <script src="popup.js"></script>
 </body>
 </html>
